Updated page About FreeCAD/cs

--- a/wiki/cs/About_FreeCAD.html
+++ b/wiki/cs/About_FreeCAD.html
@@ -14,7 +14,7 @@
 <li><a href="../ro/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="A propos de FreeCAD (33% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sk/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--med" title="O FreeCADe (53% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="../sv/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--low" title="About FreeCAD (13% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1054;&#1090;&#1085;&#1086;&#1089;&#1085;&#1086; FreeCAD (100% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1054; FreeCAD (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/About_FreeCAD.html" class="mw-pt-progress mw-pt-progress--low" title="About FreeCAD (7% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -32,11 +32,8 @@
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Freecad_default.jpg&amp;filetimestamp=20130925032446&amp;.html" class="mw-file-description"><img src="../File/Freecad_default.jpg" decoding="async" width="1024" height="604" class="mw-file-element" data-file-width="1564" data-file-height="922"></a><figcaption></figcaption></figure> 
 <p><b>FreeCAD</b> je univerz&aacute;ln&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open source</a> parametrick&yacute; 3D <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CAD"><b>CAD</b></a> model&aacute;&#345; licencovan&yacute; pod <a href="../cs/License.html" title="License/cs">LGPL licenc&iacute;</a>. FreeCAD je zam&#283;&#345;en p&#345;&iacute;mo na <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Mechanical_engineering">stroj&iacute;renstv&iacute;</a> a <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Product_design">produktov&yacute; design</a>, ale d&iacute;ky sv&eacute; univerz&aacute;lnosti se hod&iacute; i pro &scaron;ir&scaron;&iacute; spektrum pou&#382;it&iacute; v oblasti in&#382;en&yacute;rstv&iacute;, jako je architektura, anal&yacute;za kone&#269;n&yacute;ch prvk&#367;, 3D tisk a dal&scaron;&iacute; &uacute;koly.
 </p><p>Funk&#269;n&iacute; n&aacute;stroje FreeCADu jsou podobn&eacute; <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Catia">Catii</a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Solidworks">SolidWorksu</a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Solid_Edge">Solid Edge</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revitu</a> a proto tak&eacute; spad&aacute; do kategorie <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/CAD"><b>CAD</b></a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Product_Lifecycle_Management"><b>PLM</b></a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/CAx"><b>CAx</b></a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Computer-aided_engineering"><b>CAE</b></a> a <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling"><b>BIM</b></a>. To je <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Parametric_feature_based_modeler">funk&#269;n&#283; zam&#283;&#345;en&yacute; parametrick&yacute; modelovac&iacute; syst&eacute;m</a> s modul&aacute;rn&iacute; architekturou software, co&#382; usnad&#328;uje poskytov&aacute;n&iacute; dal&scaron;&iacute;ch funkcionalit bez nutnosti modifikace j&aacute;dra syst&eacute;mu.
+</p><p>Stejn&#283; jako jin&eacute; CAD modelery obsahuje mnoho 2D komponent pro kreslen&iacute; rovinn&yacute;ch tvar&#367; nebo vytv&aacute;&#345;en&iacute; v&yacute;robn&iacute;ch v&yacute;kres&#367;. Nicm&eacute;n&#283; p&#345;&iacute;m&eacute; 2D kreslen&iacute; (jako <a rel="nofollow" class="external text" href="https://inkscape.org/">Inkscape</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/AutoCAD#AutoCAD_LT">AutoCAD LT</a>) nen&iacute; jeho hlavn&iacute;m zam&#283;&#345;en&iacute;m, stejn&#283; jako animace nebo editace s&iacute;t&iacute; (jako <a rel="nofollow" class="external text" href="https://www.blender.org/">Blender</a>, <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Maya_(software)">Maya</a>, <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_3ds_Max">Autodesk 3ds Max</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CINEMA_4D">Cinema 4D</a>). D&iacute;ky sv&eacute; &scaron;irok&eacute; p&#345;izp&#367;sobivosti je v&scaron;ak FreeCAD u&#382;ite&#269;n&yacute; v mnohem &scaron;ir&scaron;&iacute; oblasti kolem sv&eacute; z&aacute;kladn&iacute; sady funkc&iacute;.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Jako u mnoha modern&iacute;ch 3D <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/CAD">CAD</a> modelovac&iacute;ch syst&eacute;m&#367; m&aacute; i tento mnoho 2D komponent pro n&aacute;&#269;rt 2D tvar&#367; nebo extrahov&aacute;n&iacute; designov&yacute;ch detail&#367; ze 3D model&#367; pro vytv&aacute;&#345;en&iacute; 2D v&yacute;kres&#367;, ale nen&iacute; zam&#283;&#345;en na p&#345;&iacute;m&eacute; 2D kreslen&iacute; (jako <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/AutoCAD#AutoCAD_LT">AutoCAD LT</a>), ani animace nebo organick&eacute; tvary (jako <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Maya_(software)">Maya</a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/3ds_Max">3ds Max</a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Blender_%28software%29">Blender</a> nebo <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/CINEMA_4D">Cinema 4D</a>), a&#269;koliv, d&iacute;ky jeho &scaron;irok&eacute; adaptabilit&#283;, m&#367;&#382;e b&yacute;t FreeCAD u&#382;ite&#269;n&yacute; v mnohem &scaron;ir&scaron;&iacute; oblasti ne&#382; je jeho z&aacute;kladn&iacute; zam&#283;&#345;en&iacute;.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>FreeCAD maxim&aacute;ln&#283; vyu&#382;&iacute;v&aacute; v&scaron;echny v&yacute;znamn&eacute; open-source knihovny, kter&eacute; existuj&iacute; na poli  <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Scientific_Computation">Scientific Computing</a>. Mezi nimi jsou <a rel="nofollow" class="external text" href="http://OpenCascade.org">OpenCascade</a>, v&yacute;konn&eacute; CAD j&aacute;dro, <a rel="nofollow" class="external text" href="http://www.Coin3D.org">Coin3D</a>, zalo&#382;en&yacute; na <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a>, <a rel="nofollow" class="external text" href="http://www.qtsoftware.com/">Qt</a>, sv&#283;tozn&aacute;m&yacute; UI framework a <a rel="nofollow" class="external text" href="http://www.python.org">Python</a>, jeden z nejlep&scaron;&iacute;ch dostupn&yacute;ch skriptovac&iacute;ch jazyk&#367;. S&aacute;m FreeCAD tak&eacute; m&#367;&#382;e b&yacute;t pou&#382;it jako knihovna dal&scaron;&iacute;mi programy.
 </p>
@@ -85,29 +82,29 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118061932
+Cached time: 20260118062130
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.080 seconds
-Real time usage: 0.163 seconds
-Preprocessor visited node count: 140/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.174 seconds
+Preprocessor visited node count: 139/1000000
 Post&#8208;expand include size: 7144/2097152 bytes
 Template argument size: 2321/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4232/5000000 bytes
+Unstrip post&#8208;expand size: 4233/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.166      1 -total
- 77.69%    7.898      1 Template:Userdocnavi/cs
- 30.32%    3.082      1 Template:Navigation_menu_2
- 20.80%    2.114      2 Template:Docnav
+100.00%   11.558      1 -total
+ 73.53%    8.499      1 Template:Userdocnavi/cs
+ 25.80%    2.982      1 Template:Navigation_menu_2
+ 24.25%    2.803      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118061931 and revision id 1739791. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118062130 and revision id 1739793. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
