Updated page About FreeCAD/cs

--- a/wiki/cs/About_FreeCAD.html
+++ b/wiki/cs/About_FreeCAD.html
@@ -33,11 +33,8 @@
 <p><b>FreeCAD</b> je univerz&aacute;ln&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open source</a> parametrick&yacute; 3D <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CAD"><b>CAD</b></a> model&aacute;&#345; licencovan&yacute; pod <a href="../cs/License.html" title="License/cs">LGPL licenc&iacute;</a>. FreeCAD je zam&#283;&#345;en p&#345;&iacute;mo na <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Mechanical_engineering">stroj&iacute;renstv&iacute;</a> a <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Product_design">produktov&yacute; design</a>, ale d&iacute;ky sv&eacute; univerz&aacute;lnosti se hod&iacute; i pro &scaron;ir&scaron;&iacute; spektrum pou&#382;it&iacute; v oblasti in&#382;en&yacute;rstv&iacute;, jako je architektura, anal&yacute;za kone&#269;n&yacute;ch prvk&#367;, 3D tisk a dal&scaron;&iacute; &uacute;koly.
 </p><p>Funk&#269;n&iacute; n&aacute;stroje FreeCADu jsou podobn&eacute; <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Catia">Catii</a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Solidworks">SolidWorksu</a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Solid_Edge">Solid Edge</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revitu</a> a proto tak&eacute; spad&aacute; do kategorie <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/CAD"><b>CAD</b></a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Product_Lifecycle_Management"><b>PLM</b></a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/CAx"><b>CAx</b></a>, <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Computer-aided_engineering"><b>CAE</b></a> a <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling"><b>BIM</b></a>. To je <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Parametric_feature_based_modeler">funk&#269;n&#283; zam&#283;&#345;en&yacute; parametrick&yacute; modelovac&iacute; syst&eacute;m</a> s modul&aacute;rn&iacute; architekturou software, co&#382; usnad&#328;uje poskytov&aacute;n&iacute; dal&scaron;&iacute;ch funkcionalit bez nutnosti modifikace j&aacute;dra syst&eacute;mu.
 </p><p>Stejn&#283; jako jin&eacute; CAD modelery obsahuje mnoho 2D komponent pro kreslen&iacute; rovinn&yacute;ch tvar&#367; nebo vytv&aacute;&#345;en&iacute; v&yacute;robn&iacute;ch v&yacute;kres&#367;. Nicm&eacute;n&#283; p&#345;&iacute;m&eacute; 2D kreslen&iacute; (jako <a rel="nofollow" class="external text" href="https://inkscape.org/">Inkscape</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/AutoCAD#AutoCAD_LT">AutoCAD LT</a>) nen&iacute; jeho hlavn&iacute;m zam&#283;&#345;en&iacute;m, stejn&#283; jako animace nebo editace s&iacute;t&iacute; (jako <a rel="nofollow" class="external text" href="https://www.blender.org/">Blender</a>, <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Maya_(software)">Maya</a>, <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_3ds_Max">Autodesk 3ds Max</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CINEMA_4D">Cinema 4D</a>). D&iacute;ky sv&eacute; &scaron;irok&eacute; p&#345;izp&#367;sobivosti je v&scaron;ak FreeCAD u&#382;ite&#269;n&yacute; v mnohem &scaron;ir&scaron;&iacute; oblasti kolem sv&eacute; z&aacute;kladn&iacute; sady funkc&iacute;.
+</p><p>FreeCAD intenzivn&#283; vyu&#382;&iacute;v&aacute; open-source knihovny, kter&eacute; existuj&iacute; v oblasti <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Scientific_Computation">v&#283;deck&yacute;ch v&yacute;po&#269;t&#367;</a>. Mezi nimi je <a rel="nofollow" class="external text" href="https://OpenCascade.org">Open Cascade Technology (OCCT)</a>, v&yacute;konn&eacute; j&aacute;dro CAD; <a rel="nofollow" class="external text" href="https://github.com/coin3d/coin/wiki">Coin3D</a>, sada n&aacute;stroj&#367; pro v&yacute;voj 3D grafiky kompatibiln&iacute; s <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a>; <a rel="nofollow" class="external text" href="https://www.qt.io">Qt</a>, sv&#283;tov&#283; proslul&yacute; framework u&#382;ivatelsk&eacute;ho rozhran&iacute;; a <a rel="nofollow" class="external text" href="https://python.org">Python</a>, modern&iacute; skriptovac&iacute; jazyk. Samotn&yacute; FreeCAD lze tak&eacute; pou&#382;&iacute;t jako knihovnu pro jin&eacute; programy.
 </p>
-<div class="mw-translate-fuzzy">
-<p>FreeCAD maxim&aacute;ln&#283; vyu&#382;&iacute;v&aacute; v&scaron;echny v&yacute;znamn&eacute; open-source knihovny, kter&eacute; existuj&iacute; na poli  <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Scientific_Computation">Scientific Computing</a>. Mezi nimi jsou <a rel="nofollow" class="external text" href="http://OpenCascade.org">OpenCascade</a>, v&yacute;konn&eacute; CAD j&aacute;dro, <a rel="nofollow" class="external text" href="http://www.Coin3D.org">Coin3D</a>, zalo&#382;en&yacute; na <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a>, <a rel="nofollow" class="external text" href="http://www.qtsoftware.com/">Qt</a>, sv&#283;tozn&aacute;m&yacute; UI framework a <a rel="nofollow" class="external text" href="http://www.python.org">Python</a>, jeden z nejlep&scaron;&iacute;ch dostupn&yacute;ch skriptovac&iacute;ch jazyk&#367;. S&aacute;m FreeCAD tak&eacute; m&#367;&#382;e b&yacute;t pou&#382;it jako knihovna dal&scaron;&iacute;mi programy.
-</p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>FreeCAD je tak&eacute; pln&#283; <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Cross-platform">multiplatformn&iacute;</a> a v sou&#269;asn&eacute; dob&#283; bezchybn&#283; b&#283;&#382;&iacute; na syst&eacute;mech Windows, Linux/Unix a Mac OSX, s p&#345;esn&#283; stejn&yacute;m vzhledem a funkcionalitou na v&scaron;ech platform&aacute;ch.
 </p>
@@ -82,13 +79,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118062130
+Cached time: 20260118062327
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.087 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 139/1000000
+CPU time usage: 0.065 seconds
+Real time usage: 0.110 seconds
+Preprocessor visited node count: 138/1000000
 Post&#8208;expand include size: 7144/2097152 bytes
 Template argument size: 2321/2097152 bytes
 Highest expansion depth: 5/100
@@ -98,13 +95,13 @@ Unstrip post&#8208;expand size: 4233/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.558      1 -total
- 73.53%    8.499      1 Template:Userdocnavi/cs
- 25.80%    2.982      1 Template:Navigation_menu_2
- 24.25%    2.803      2 Template:Docnav
+100.00%    8.056      1 -total
+ 75.16%    6.055      1 Template:Userdocnavi/cs
+ 34.78%    2.802      1 Template:Navigation_menu_2
+ 22.98%    1.851      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118062130 and revision id 1739793. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118062326 and revision id 1739795. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
