--- a/wiki/cs/About_FreeCAD.html
+++ b/wiki/cs/About_FreeCAD.html
@@ -35,12 +35,8 @@
 </p><p>Stejn&#283; jako jin&eacute; CAD modelery obsahuje mnoho 2D komponent pro kreslen&iacute; rovinn&yacute;ch tvar&#367; nebo vytv&aacute;&#345;en&iacute; v&yacute;robn&iacute;ch v&yacute;kres&#367;. Nicm&eacute;n&#283; p&#345;&iacute;m&eacute; 2D kreslen&iacute; (jako <a rel="nofollow" class="external text" href="https://inkscape.org/">Inkscape</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/AutoCAD#AutoCAD_LT">AutoCAD LT</a>) nen&iacute; jeho hlavn&iacute;m zam&#283;&#345;en&iacute;m, stejn&#283; jako animace nebo editace s&iacute;t&iacute; (jako <a rel="nofollow" class="external text" href="https://www.blender.org/">Blender</a>, <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Maya_(software)">Maya</a>, <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_3ds_Max">Autodesk 3ds Max</a> nebo <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CINEMA_4D">Cinema 4D</a>). D&iacute;ky sv&eacute; &scaron;irok&eacute; p&#345;izp&#367;sobivosti je v&scaron;ak FreeCAD u&#382;ite&#269;n&yacute; v mnohem &scaron;ir&scaron;&iacute; oblasti kolem sv&eacute; z&aacute;kladn&iacute; sady funkc&iacute;.
 </p><p>FreeCAD intenzivn&#283; vyu&#382;&iacute;v&aacute; open-source knihovny, kter&eacute; existuj&iacute; v oblasti <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Scientific_Computation">v&#283;deck&yacute;ch v&yacute;po&#269;t&#367;</a>. Mezi nimi je <a rel="nofollow" class="external text" href="https://OpenCascade.org">Open Cascade Technology (OCCT)</a>, v&yacute;konn&eacute; j&aacute;dro CAD; <a rel="nofollow" class="external text" href="https://github.com/coin3d/coin/wiki">Coin3D</a>, sada n&aacute;stroj&#367; pro v&yacute;voj 3D grafiky kompatibiln&iacute; s <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_Inventor">Open Inventor</a>; <a rel="nofollow" class="external text" href="https://www.qt.io">Qt</a>, sv&#283;tov&#283; proslul&yacute; framework u&#382;ivatelsk&eacute;ho rozhran&iacute;; a <a rel="nofollow" class="external text" href="https://python.org">Python</a>, modern&iacute; skriptovac&iacute; jazyk. Samotn&yacute; FreeCAD lze tak&eacute; pou&#382;&iacute;t jako knihovnu pro jin&eacute; programy.
 </p><p>FreeCAD je tak&eacute; pln&#283; <a rel="nofollow" class="external text" href="http://en.wikipedia.org/wiki/Cross-platform">multiplatformn&iacute;</a> a v sou&#269;asn&eacute; dob&#283; bezchybn&#283; b&#283;&#382;&iacute; na syst&eacute;mech Windows, Linux/Unix a Mac OSX, s p&#345;esn&#283; stejn&yacute;m vzhledem a funkcionalitou na v&scaron;ech platform&aacute;ch.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Pro dal&scaron;&iacute; informace o mo&#382;nostech FreeCADu se pod&iacute;vejte na <a href="../Feature_list.html" title="Feature list">Seznam funkc&iacute;</a>, <a href="../Getting_started.html#What's_new" title="Getting started"> pozn&aacute;mky k nejnov&#283;j&scaron;&iacute;m verz&iacute;m</a> nebo na &#269;l&aacute;nky <a href="../Getting_started.html" title="Getting started">Za&#269;&iacute;n&aacute;me</a>.
-</p>
-</div>
-<p><span id="About_the_FreeCAD_project"></span>
+</p><p>Dal&scaron;&iacute; informace o mo&#382;nostech programu FreeCAD najdete v <a href="../Feature_list.html" title="Feature list">seznamu funkc&iacute;</a>, <a href="../Feature_list.html#Release_notes" title="Feature list">nejnov&#283;j&scaron;&iacute;ch pozn&aacute;mk&aacute;ch k vyd&aacute;n&iacute;</a> a &#269;l&aacute;nc&iacute;ch <a href="../Getting_started.html" title="Getting started">za&#269;&iacute;n&aacute;me</a> nebo si prohl&eacute;dn&#283;te dal&scaron;&iacute; <a href="../Screenshots.html" title="Screenshots">screenshoty</a>.
+</p><p><span id="About_the_FreeCAD_project"></span>
 </p>
 <h3><span class="mw-headline" id="O_projektu_FreeCAD">O projektu FreeCAD</span></h3>
 <div class="mw-translate-fuzzy">
@@ -76,12 +72,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118062422
+Cached time: 20260118062656
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.076 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.167 seconds
 Preprocessor visited node count: 137/1000000
 Post&#8208;expand include size: 7144/2097152 bytes
 Template argument size: 2321/2097152 bytes
@@ -92,13 +88,13 @@ Unstrip post&#8208;expand size: 4233/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.228      1 -total
- 64.45%    6.592      1 Template:Userdocnavi/cs
- 32.77%    3.352      2 Template:Docnav
- 28.37%    2.902      1 Template:Navigation_menu_2
+100.00%   12.539      1 -total
+ 60.02%    7.526      1 Template:Userdocnavi/cs
+ 37.44%    4.695      2 Template:Docnav
+ 19.34%    2.425      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118062422 and revision id 1739797. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:13038-0!canonical and timestamp 20260118062656 and revision id 1739799. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
