Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -36,7 +36,7 @@
 </p>
 <h2><span id="P.C5.99edmluva"></span><span class="mw-headline" id="P&#345;edmluva">P&#345;edmluva</span></h2>
 <p>FreeCAD je 3D <a href="../About_FreeCAD.html" title="About FreeCAD">parametrick&aacute; modelovac&iacute; aplikace</a>. Je prim&aacute;rn&#283; ur&#269;ena pro mechanick&eacute; konstrukce, ale slou&#382;&iacute; tak&eacute; pro v&scaron;echny ostatn&iacute; &uacute;&#269;ely, kde pot&#345;ebujete modelovat 3D objekty s p&#345;esnost&iacute; a kontrolou nad histori&iacute; modelov&aacute;n&iacute;.
-</p><p>FreeCAD je zat&iacute;m v rann&eacute;m stupni v&yacute;voje, tak&#382;e, p&#345;esto&#382;e ji&#382; nab&iacute;z&iacute; velk&yacute; (a rostouc&iacute;) seznam  <a href="../cs/Feature_list.html" title="Feature list/cs">mo&#382;nost&iacute;</a>, je&scaron;t&#283; je st&aacute;le dost toho co chyb&iacute;, zvl&aacute;&scaron;&#357; ve srovn&aacute;n&iacute; s komer&#269;n&iacute;mi &#345;e&scaron;en&iacute;mi a m&#367;&#382;ete zjistit, &#382;e nen&iacute; na takov&eacute;m stupni aby se dal vyu&#382;&iacute;vat v produk&#269;n&iacute;m prost&#345;ed&iacute;. P&#345;esto je zde rychle rostouc&iacute; <a rel="nofollow" class="external text" href="http://forum.freecad.org/index.php">komunita</a> zap&aacute;len&yacute;ch u&#382;ivatel&#367; a u&#382; te&#271; m&#367;&#382;ete naj&iacute;t <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">mnoho p&#345;&iacute;klad&#367;</a> kvalitn&iacute;ch projekt&#367; vyvinut&yacute;ch ve FreeCADu.
+</p><p>FreeCAD je vyv&iacute;jen od roku 2002 a nab&iacute;z&iacute; &scaron;irokou &scaron;k&aacute;lu <a href="../Feature_list.html" title="Feature list">funkc&iacute;</a>. N&#283;kter&eacute; funkce zat&iacute;m chyb&iacute;, ale pro hobby pou&#382;it&iacute; a mal&eacute; d&iacute;lny je dostate&#269;n&#283; v&yacute;konn&yacute;. Existuje rychle rostouc&iacute; komunita nad&scaron;en&yacute;ch u&#382;ivatel&#367;, kte&#345;&iacute; se &uacute;&#269;astn&iacute; <a rel="nofollow" class="external text" href="https://forum.freecad.org">f&oacute;ra FreeCADu</a>, kde najdete <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">mnoho p&#345;&iacute;klad&#367;</a> kvalitn&iacute;ch projekt&#367; vyvinut&yacute;ch pomoc&iacute; FreeCADu.
 </p>
 <div class="mw-translate-fuzzy">
 <p>Jako v&scaron;echny open-source projekty, projekt FreeCAD nen&iacute; jednosm&#283;rn&aacute; pr&aacute;ce v&yacute;voj&aacute;&#345;&#367; pro V&aacute;s. Mnoho z&aacute;vis&iacute; na jeho komunit&#283; - jak roste, zlep&scaron;uje vlastnosti, stabilizuje ho (opravuje chyby). Proto nezapom&iacute;nejte, kdy&#382; za&#269;&iacute;nate s FreeCADem, jestli&#382;e se V&aacute;m l&iacute;b&iacute;, m&#367;&#382;ete na n&#283;j m&iacute;t p&#345;&iacute;m&yacute; vliv a <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">pom&aacute;hat</a> projektu!
@@ -231,12 +231,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118063536
+Cached time: 20260118063705
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 260/1000000
 Post&#8208;expand include size: 7733/2097152 bytes
 Template argument size: 2235/2097152 bytes
@@ -247,16 +247,16 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.511      1 -total
- 25.63%    4.232      1 Template:Userdocnavi
- 23.40%    3.863      2 Template:Docnav
- 20.44%    3.375      2 Template:KEY
- 16.96%    2.800      1 Template:TOCright
- 15.35%    2.535      1 Template:Navigation_menu_2
- 10.80%    1.784      1 Template:Incode
+100.00%   12.850      1 -total
+ 34.87%    4.481      1 Template:Userdocnavi
+ 20.03%    2.574      1 Template:Navigation_menu_2
+ 18.79%    2.415      2 Template:Docnav
+ 16.64%    2.138      1 Template:Incode
+ 12.86%    1.652      2 Template:KEY
+ 12.17%    1.564      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118063536 and revision id 1739804. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118063705 and revision id 1739806. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
