--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -37,12 +37,8 @@
 <h2><span id="P.C5.99edmluva"></span><span class="mw-headline" id="P&#345;edmluva">P&#345;edmluva</span></h2>
 <p>FreeCAD je 3D <a href="../About_FreeCAD.html" title="About FreeCAD">parametrick&aacute; modelovac&iacute; aplikace</a>. Je prim&aacute;rn&#283; ur&#269;ena pro mechanick&eacute; konstrukce, ale slou&#382;&iacute; tak&eacute; pro v&scaron;echny ostatn&iacute; &uacute;&#269;ely, kde pot&#345;ebujete modelovat 3D objekty s p&#345;esnost&iacute; a kontrolou nad histori&iacute; modelov&aacute;n&iacute;.
 </p><p>FreeCAD je vyv&iacute;jen od roku 2002 a nab&iacute;z&iacute; &scaron;irokou &scaron;k&aacute;lu <a href="../Feature_list.html" title="Feature list">funkc&iacute;</a>. N&#283;kter&eacute; funkce zat&iacute;m chyb&iacute;, ale pro hobby pou&#382;it&iacute; a mal&eacute; d&iacute;lny je dostate&#269;n&#283; v&yacute;konn&yacute;. Existuje rychle rostouc&iacute; komunita nad&scaron;en&yacute;ch u&#382;ivatel&#367;, kte&#345;&iacute; se &uacute;&#269;astn&iacute; <a rel="nofollow" class="external text" href="https://forum.freecad.org">f&oacute;ra FreeCADu</a>, kde najdete <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewforum.php?f=24">mnoho p&#345;&iacute;klad&#367;</a> kvalitn&iacute;ch projekt&#367; vyvinut&yacute;ch pomoc&iacute; FreeCADu.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Jako v&scaron;echny open-source projekty, projekt FreeCAD nen&iacute; jednosm&#283;rn&aacute; pr&aacute;ce v&yacute;voj&aacute;&#345;&#367; pro V&aacute;s. Mnoho z&aacute;vis&iacute; na jeho komunit&#283; - jak roste, zlep&scaron;uje vlastnosti, stabilizuje ho (opravuje chyby). Proto nezapom&iacute;nejte, kdy&#382; za&#269;&iacute;nate s FreeCADem, jestli&#382;e se V&aacute;m l&iacute;b&iacute;, m&#367;&#382;ete na n&#283;j m&iacute;t p&#345;&iacute;m&yacute; vliv a <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">pom&aacute;hat</a> projektu!
-</p>
-</div>
-<p>Viz tak&eacute;:
+</p><p>Stejn&#283; jako v&scaron;echny projekty svobodn&eacute;ho softwaru, i FreeCAD z&aacute;vis&iacute; na sv&eacute; komunit&#283;, aby mohl r&#367;st, z&iacute;sk&aacute;vat nov&eacute; funkce a opravovat chyby. Nezapome&#328;te na to p&#345;i pou&#382;&iacute;v&aacute;n&iacute; FreeCADu: pokud se v&aacute;m l&iacute;b&iacute;, m&#367;&#382;ete <a href="../Donate.html" title="Donate">p&#345;isp&#283;t</a> a <a href="../Help_FreeCAD.html" title="Help FreeCAD">pom&aacute;hat FreeCADu</a> r&#367;zn&yacute;mi zp&#367;soby, nap&#345;&iacute;klad psan&iacute;m dokumentace nebo p&#345;eklady.
+</p><p>Viz tak&eacute;:
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">Migrating to FreeCAD from Fusion360</a></li>
@@ -231,12 +227,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118063705
+Cached time: 20260118063757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.156 seconds
 Preprocessor visited node count: 260/1000000
 Post&#8208;expand include size: 7733/2097152 bytes
 Template argument size: 2235/2097152 bytes
@@ -247,16 +243,16 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.850      1 -total
- 34.87%    4.481      1 Template:Userdocnavi
- 20.03%    2.574      1 Template:Navigation_menu_2
- 18.79%    2.415      2 Template:Docnav
- 16.64%    2.138      1 Template:Incode
- 12.86%    1.652      2 Template:KEY
- 12.17%    1.564      1 Template:TOCright
+100.00%   13.120      1 -total
+ 36.43%    4.780      1 Template:Userdocnavi
+ 20.85%    2.736      1 Template:Navigation_menu_2
+ 18.94%    2.485      2 Template:Docnav
+ 14.22%    1.866      1 Template:Incode
+ 12.61%    1.655      1 Template:TOCright
+ 12.31%    1.615      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118063705 and revision id 1739806. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118063757 and revision id 1739808. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
