Created page with "* [[Migrating_to_FreeCAD_from_Fusion360|Migrace do FreeCADu z Fusion360]] * [[Which_workbench_should_I_choose|Kterou pracovní plochu si mám vybrat?]] * [[Tutorials|Výukové programy]] * [[Video_tutorials|Videonávody]]"

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -40,12 +40,10 @@
 </p><p>Stejn&#283; jako v&scaron;echny projekty svobodn&eacute;ho softwaru, i FreeCAD z&aacute;vis&iacute; na sv&eacute; komunit&#283;, aby mohl r&#367;st, z&iacute;sk&aacute;vat nov&eacute; funkce a opravovat chyby. Nezapome&#328;te na to p&#345;i pou&#382;&iacute;v&aacute;n&iacute; FreeCADu: pokud se v&aacute;m l&iacute;b&iacute;, m&#367;&#382;ete <a href="../Donate.html" title="Donate">p&#345;isp&#283;t</a> a <a href="../Help_FreeCAD.html" title="Help FreeCAD">pom&aacute;hat FreeCADu</a> r&#367;zn&yacute;mi zp&#367;soby, nap&#345;&iacute;klad psan&iacute;m dokumentace nebo p&#345;eklady.
 </p><p>Viz tak&eacute;:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">Migrating to FreeCAD from Fusion360</a></li>
-<li><a href="../Which_workbench_should_I_choose.html" title="Which workbench should I choose">Which workbench should I choose?</a></li>
-<li><a href="../Tutorials.html" title="Tutorials">Tutorials</a></li>
-<li><a href="../Video_tutorials.html" title="Video tutorials">Video tutorials</a></li></ul>
-</div>
+<ul><li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">Migrace do FreeCADu z Fusion360</a></li>
+<li><a href="../Which_workbench_should_I_choose.html" title="Which workbench should I choose">Kterou pracovn&iacute; plochu si m&aacute;m vybrat?</a></li>
+<li><a href="../Tutorials.html" title="Tutorials">V&yacute;ukov&eacute; programy</a></li>
+<li><a href="../Video_tutorials.html" title="Video tutorials">Videon&aacute;vody</a></li></ul>
 <p><span id="Installing"></span>
 </p>
 <h2><span class="mw-headline" id="Instalace">Instalace</span></h2>
@@ -227,13 +225,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118063757
+Cached time: 20260118064052
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.156 seconds
-Preprocessor visited node count: 260/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 259/1000000
 Post&#8208;expand include size: 7733/2097152 bytes
 Template argument size: 2235/2097152 bytes
 Highest expansion depth: 5/100
@@ -243,16 +241,16 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.120      1 -total
- 36.43%    4.780      1 Template:Userdocnavi
- 20.85%    2.736      1 Template:Navigation_menu_2
- 18.94%    2.485      2 Template:Docnav
- 14.22%    1.866      1 Template:Incode
- 12.61%    1.655      1 Template:TOCright
- 12.31%    1.615      2 Template:KEY
+100.00%   10.553      1 -total
+ 38.89%    4.104      1 Template:Userdocnavi
+ 25.80%    2.723      1 Template:Navigation_menu_2
+ 19.85%    2.094      2 Template:Docnav
+ 12.81%    1.352      1 Template:TOCright
+ 12.41%    1.310      1 Template:Incode
+ 11.65%    1.229      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118063757 and revision id 1739808. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118064052 and revision id 1739810. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
