--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -47,11 +47,8 @@
 <p><span id="Installing"></span>
 </p>
 <h2><span class="mw-headline" id="Instalace">Instalace</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Nejprve (jestli&#382;e u&#382; to n&#283;kdo neud&#283;lal) st&aacute;hn&#283;te a nainstalujte FreeCAD. Pod&iacute;vejte se na str&aacute;nku <a href="../cs/Download.html" title="Download/cs">Stahov&aacute;n&iacute;</a> na informace o aktu&aacute;ln&iacute; verzi a aktualizac&iacute;ch a na str&aacute;nku  <a href="../cs/Installing.html" class="mw-redirect" title="Installing/cs">Instalace</a> na informace o tom, jak FreeCAD nainstalovat. K dispozici jsou u&#382; instala&#269;n&iacute; bal&iacute;&#269;ky pro Windows (.msi), Ubuntu &amp; Debian (.deb) openSUSE (.rpm) a Mac OSX. Proto&#382;e FreeCAD je open-source, jste-li odv&aacute;&#382;n&iacute; a chcete se pod&iacute;vat na posledn&iacute; novinky, kter&eacute; jsou pr&aacute;v&#283; ve v&yacute;voji, m&#367;&#382;ete si tak&eacute; st&aacute;hnout zdrojov&eacute; k&oacute;dy a <a href="../cs/Compiling.html" title="Compiling/cs">zkompilovat</a> si FreeCAD sami.
-</p>
-</div>
-<p><span id="Exploring_the_interface"></span>
+<p>Nejprve si st&aacute;hn&#283;te a nainstalujte FreeCAD. Informace o aktu&aacute;ln&iacute;ch verz&iacute;ch a aktualizac&iacute;ch najdete na str&aacute;nce <a href="../Download.html" title="Download">Download</a> a pokyny k instalaci pro v&aacute;&scaron; opera&#269;n&iacute; syst&eacute;m (<a href="../Installing_on_Windows.html" title="Installing on Windows">Windows</a>, <a href="../Installing_on_Linux.html" title="Installing on Linux">Linux</a> nebo <a href="../Installing_on_Mac.html" title="Installing on Mac">macOS</a>). FreeCAD je k dispozici v bal&iacute;&#269;kov&yacute;ch spr&aacute;vc&iacute;ch mnoha distribuc&iacute; Linuxu. Jeliko&#382; je FreeCAD open-source, m&#367;&#382;ete si tak&eacute; st&aacute;hnout zdrojov&yacute; k&oacute;d a <a href="../Compiling.html" title="Compiling">kompilovat</a> ho sami.
+</p><p><span id="Exploring_the_interface"></span>
 </p>
 <h2><span id="Prozkoum.C3.A1n.C3.AD_u.C5.BEivatelsk.C3.A9ho_rozhran.C3.AD"></span><span class="mw-headline" id="Prozkoum&aacute;n&iacute;_u&#382;ivatelsk&eacute;ho_rozhran&iacute;">Prozkoum&aacute;n&iacute; u&#382;ivatelsk&eacute;ho rozhran&iacute;</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -225,13 +222,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118064052
+Cached time: 20260118064219
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 259/1000000
+CPU time usage: 0.092 seconds
+Real time usage: 0.143 seconds
+Preprocessor visited node count: 260/1000000
 Post&#8208;expand include size: 7733/2097152 bytes
 Template argument size: 2235/2097152 bytes
 Highest expansion depth: 5/100
@@ -241,16 +238,16 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.553      1 -total
- 38.89%    4.104      1 Template:Userdocnavi
- 25.80%    2.723      1 Template:Navigation_menu_2
- 19.85%    2.094      2 Template:Docnav
- 12.81%    1.352      1 Template:TOCright
- 12.41%    1.310      1 Template:Incode
- 11.65%    1.229      2 Template:KEY
+100.00%   10.614      1 -total
+ 36.27%    3.850      1 Template:Userdocnavi
+ 24.42%    2.592      2 Template:Docnav
+ 21.96%    2.331      1 Template:Navigation_menu_2
+ 16.77%    1.780      1 Template:Incode
+  9.43%    1.001      1 Template:TOCright
+  9.05%    0.961      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118064052 and revision id 1739810. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118064218 and revision id 1739812. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
