--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -53,7 +53,7 @@
 <h2><span id="Prozkoum.C3.A1n.C3.AD_u.C5.BEivatelsk.C3.A9ho_rozhran.C3.AD"></span><span class="mw-headline" id="Prozkoum&aacute;n&iacute;_u&#382;ivatelsk&eacute;ho_rozhran&iacute;">Prozkoum&aacute;n&iacute; u&#382;ivatelsk&eacute;ho rozhran&iacute;</span></h2>
 <p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
-<figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=FreeCAD_interface.png&amp;filetimestamp=20190920183449&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface.png" decoding="async" width="1024" height="582" class="mw-file-element" data-file-width="1853" data-file-height="1053"></a><figcaption></figcaption></figure>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Standardn&iacute; rozhran&iacute; FreeCADu</p>
 <p><i>Podrobn&eacute; vysv&#283;tlen&iacute; najdete v sekci <a href="../Interface.html" title="Interface">U&#382;ivatelsk&eacute; rozhran&iacute;</a>.</i>
 </p>
 <dl><dd>1. <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">Hlavn&iacute; zobrazovac&iacute; oblast</a>, kter&aacute; m&#367;&#382;e obsahovat r&#367;zn&aacute; okna s kartami, p&#345;edev&scaron;&iacute;m <a href="../3D_view.html" class="mw-redirect" title="3D view">3D pohled</a>.</dd>
@@ -223,15 +223,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118065920
+Cached time: 20260118070119
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.147 seconds
-Preprocessor visited node count: 277/1000000
-Post&#8208;expand include size: 7814/2097152 bytes
-Template argument size: 2312/2097152 bytes
+CPU time usage: 0.091 seconds
+Real time usage: 0.136 seconds
+Preprocessor visited node count: 286/1000000
+Post&#8208;expand include size: 8490/2097152 bytes
+Template argument size: 2342/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -239,17 +239,18 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.319      1 -total
- 35.07%    4.320      1 Template:Userdocnavi
- 21.08%    2.597      2 Template:Docnav
- 20.26%    2.496      1 Template:Navigation_menu_2
- 11.57%    1.425      1 Template:Incode
-  9.57%    1.179      2 Template:KEY
-  9.25%    1.139      1 Template:TOCright
-  8.81%    1.085      1 Template:Emphasis
+100.00%   13.519      1 -total
+ 31.83%    4.303      1 Template:Userdocnavi
+ 19.96%    2.698      1 Template:Navigation_menu_2
+ 16.19%    2.189      2 Template:Docnav
+ 10.36%    1.401      1 Template:TOCright
+ 10.15%    1.372      1 Template:Caption
+  9.59%    1.296      1 Template:Emphasis
+  9.19%    1.243      1 Template:Incode
+  7.99%    1.080      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118065920 and revision id 1739818. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118070118 and revision id 1739820. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
