--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -67,10 +67,8 @@
 <dd>9. Oblast panelu n&aacute;stroj&#367;, kde jsou panely n&aacute;stroj&#367; ukotveny.</dd>
 <dd>10. <a href="../Std_Workbench.html" title="Std Workbench">Voli&#269; pracovn&iacute;ho prostoru</a>, kde vyberete aktivn&iacute; <a href="../Workbenches.html" title="Workbenches">pracovn&iacute; prostor</a>.</dd>
 <dd>11. <a href="../Standard_Menu.html" title="Standard Menu">Standardn&iacute; menu</a>, kter&eacute; obsahuje z&aacute;kladn&iacute; funkce programu.</dd></dl>
-<div class="mw-translate-fuzzy">
-<p>Z&aacute;kladn&iacute; koncept pod interfacem FreeCADu je rozd&#283;len&iacute; do <a href="../cs/Workbenches.html" title="Workbenches/cs">pracovn&iacute;ch ploch</a>. Pracovn&iacute; plocha je soubor n&aacute;stroj&#367; vhodn&yacute;ch pro dan&eacute; typy &uacute;loh, jako je pr&aacute;ce se <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">s&iacute;t&#283;mi</a> nebo kreslen&iacute; <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">2D objekt&#367;</a> nebo <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">n&aacute;&#269;rty</a>. Aktu&aacute;ln&iacute; pracovn&iacute; plochu m&#367;&#382;ete zap&iacute;nat p&#345;ep&iacute;n&#269;em pracovn&iacute;ch ploch (6). M&#367;&#382;ete <a href="../cs/Interface_Customization.html" title="Interface Customization/cs">u&#382;ivatelsky upravovat </a> n&aacute;stroje v&#269;len&#283;n&eacute; do pracovn&iacute; plochy, p&#345;id&aacute;vat n&aacute;stroje z jin&yacute;ch pracovn&iacute;ch ploch nebo dokonce sami vytv&aacute;&#345;et n&aacute;stroje zvan&eacute; <a href="../cs/Macros.html" title="Macros/cs">makra</a>. Je zde i obecn&aacute; pracovn&iacute; plocha, kter&aacute; zahrnuje nej&#269;ast&#283;ji vyu&#382;&iacute;van&eacute; n&aacute;stroje z jinych pracovn&iacute;ch ploch, zvan&aacute; <b>Kompletn&iacute; pracovn&iacute; plocha</b>.
+<p>Hlavn&iacute; koncepce rozhran&iacute; FreeCADu spo&#269;&iacute;v&aacute; v jeho rozd&#283;len&iacute; na <a href="../Workbenches.html" title="Workbenches">pracovn&iacute; plochy</a>. Pracovn&iacute; plocha je soubor n&aacute;stroj&#367; vhodn&yacute;ch pro konkr&eacute;tn&iacute; &uacute;kol, jako je pr&aacute;ce se <a href="../Mesh_Workbench.html" title="Mesh Workbench">s&iacute;t&#283;mi</a>, kreslen&iacute; <a href="../Draft_Workbench.html" title="Draft Workbench">2D objekt&#367;</a> nebo <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">omezen&yacute;ch n&aacute;&#269;rtk&#367;</a>. Aktu&aacute;ln&iacute; pracovn&iacute; plochu m&#367;&#382;ete p&#345;epnout pomoc&iacute; <a href="../Std_Workbench.html" title="Std Workbench">v&yacute;b&#283;ru pracovn&iacute; plochy</a>. M&#367;&#382;ete <a href="../Interface_Customization.html" title="Interface Customization">p&#345;izp&#367;sobit</a> n&aacute;stroje obsa&#382;en&eacute; v ka&#382;d&eacute; pracovn&iacute; plo&scaron;e, p&#345;idat n&aacute;stroje z jin&yacute;ch pracovn&iacute;ch ploch nebo dokonce vlastn&iacute; n&aacute;stroje, kter&eacute; naz&yacute;v&aacute;me <a href="../Macros.html" title="Macros">makra</a>. &#268;asto pou&#382;&iacute;van&yacute;mi v&yacute;choz&iacute;mi body jsou <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plocha PartDesign</a> a <a href="../Part_Workbench.html" title="Part Workbench">pracovn&iacute; plocha Part</a>.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Spou&scaron;t&iacute;te-li FreeCAD poprv&eacute;, dostanete se do startovn&iacute;ho centra:
 </p>
@@ -223,13 +221,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118070119
+Cached time: 20260118071216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
-Real time usage: 0.136 seconds
-Preprocessor visited node count: 286/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.173 seconds
+Preprocessor visited node count: 288/1000000
 Post&#8208;expand include size: 8490/2097152 bytes
 Template argument size: 2342/2097152 bytes
 Highest expansion depth: 5/100
@@ -239,18 +237,18 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.519      1 -total
- 31.83%    4.303      1 Template:Userdocnavi
- 19.96%    2.698      1 Template:Navigation_menu_2
- 16.19%    2.189      2 Template:Docnav
- 10.36%    1.401      1 Template:TOCright
- 10.15%    1.372      1 Template:Caption
-  9.59%    1.296      1 Template:Emphasis
-  9.19%    1.243      1 Template:Incode
-  7.99%    1.080      2 Template:KEY
+100.00%   18.680      1 -total
+ 28.23%    5.274      1 Template:Caption
+ 18.96%    3.542      1 Template:Userdocnavi
+ 14.81%    2.766      2 Template:Docnav
+ 11.91%    2.224      1 Template:Emphasis
+ 11.42%    2.134      1 Template:Navigation_menu_2
+  7.45%    1.391      1 Template:Incode
+  7.39%    1.381      2 Template:KEY
+  7.04%    1.316      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118070118 and revision id 1739820. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071216 and revision id 1739822. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
