Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -70,12 +70,8 @@
 <p>Hlavn&iacute; koncepce rozhran&iacute; FreeCADu spo&#269;&iacute;v&aacute; v jeho rozd&#283;len&iacute; na <a href="../Workbenches.html" title="Workbenches">pracovn&iacute; plochy</a>. Pracovn&iacute; plocha je soubor n&aacute;stroj&#367; vhodn&yacute;ch pro konkr&eacute;tn&iacute; &uacute;kol, jako je pr&aacute;ce se <a href="../Mesh_Workbench.html" title="Mesh Workbench">s&iacute;t&#283;mi</a>, kreslen&iacute; <a href="../Draft_Workbench.html" title="Draft Workbench">2D objekt&#367;</a> nebo <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">omezen&yacute;ch n&aacute;&#269;rtk&#367;</a>. Aktu&aacute;ln&iacute; pracovn&iacute; plochu m&#367;&#382;ete p&#345;epnout pomoc&iacute; <a href="../Std_Workbench.html" title="Std Workbench">v&yacute;b&#283;ru pracovn&iacute; plochy</a>. M&#367;&#382;ete <a href="../Interface_Customization.html" title="Interface Customization">p&#345;izp&#367;sobit</a> n&aacute;stroje obsa&#382;en&eacute; v ka&#382;d&eacute; pracovn&iacute; plo&scaron;e, p&#345;idat n&aacute;stroje z jin&yacute;ch pracovn&iacute;ch ploch nebo dokonce vlastn&iacute; n&aacute;stroje, kter&eacute; naz&yacute;v&aacute;me <a href="../Macros.html" title="Macros">makra</a>. &#268;asto pou&#382;&iacute;van&yacute;mi v&yacute;choz&iacute;mi body jsou <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plocha PartDesign</a> a <a href="../Part_Workbench.html" title="Part Workbench">pracovn&iacute; plocha Part</a>.
 </p><p>P&#345;i prvn&iacute;m spu&scaron;t&#283;n&iacute; programu FreeCAD se zobraz&iacute; &uacute;vodn&iacute; str&aacute;nka. Takto vypad&aacute; ve verzi 0.19:
 </p><p><span typeof="mw:File"><a href="../index.php?title=Start_center_0.19_screenshot.png&amp;filetimestamp=20211107235537&amp;.html" class="mw-file-description"><img src="../File/Start_center_0.19_screenshot.png" decoding="async" width="600" height="436" class="mw-file-element" data-file-width="920" data-file-height="668"></a></span>
-</p>
-<div class="mw-translate-fuzzy">
-<p>Startovn&iacute; centrum V&aacute;m umo&#382;&#328;uje rychl&yacute; p&#345;echod do n&#283;kter&eacute; z neju&#382;&iacute;van&#283;j&scaron;&iacute;ch pracovn&iacute;ch ploch, otev&#345;&iacute;t posledn&#283; pou&#382;&iacute;van&eacute; soubory nebo se pod&iacute;vat na nejnov&#283;j&scaron;&iacute; novinky ze sv&#283;ta FreeCADu. V  <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">p&#345;ednastaven&iacute;ch</a> m&#367;&#382;ete zm&#283;nit defaultn&iacute; pracovn&iacute; plochu.
-</p>
-</div>
-<p><span id="Navigating_in_the_3D_space"></span>
+</p><p>&Uacute;vodn&iacute; str&aacute;nka v&aacute;m umo&#382;&#328;uje rychle p&#345;ej&iacute;t na jednu z nej&#269;ast&#283;ji pou&#382;&iacute;van&yacute;ch pracovn&iacute;ch ploch, otev&#345;&iacute;t jeden z ned&aacute;vno pou&#382;it&yacute;ch soubor&#367; nebo si prohl&eacute;dnout nejnov&#283;j&scaron;&iacute; zpr&aacute;vy ze sv&#283;ta FreeCADu. V&yacute;choz&iacute; pracovn&iacute; plochu m&#367;&#382;ete zm&#283;nit v <a href="../Preferences_Editor.html" title="Preferences Editor">preferenc&iacute;ch</a>.
+</p><p><span id="Navigating_in_the_3D_space"></span>
 </p>
 <h2><span class="mw-headline" id="Navigace_ve_3D_prostoru">Navigace ve 3D prostoru</span></h2>
 <div class="mw-translate-fuzzy">
@@ -215,13 +211,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118071300
+Cached time: 20260118071356
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.123 seconds
-Preprocessor visited node count: 286/1000000
+CPU time usage: 0.102 seconds
+Real time usage: 0.235 seconds
+Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 8490/2097152 bytes
 Template argument size: 2342/2097152 bytes
 Highest expansion depth: 5/100
@@ -231,18 +227,18 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.778      1 -total
- 27.37%    3.497      1 Template:Userdocnavi
- 20.11%    2.570      2 Template:Docnav
- 16.90%    2.159      1 Template:Navigation_menu_2
- 10.95%    1.399      1 Template:Caption
-  9.99%    1.276      1 Template:Incode
-  9.64%    1.231      1 Template:TOCright
-  8.47%    1.083      1 Template:Emphasis
-  7.97%    1.019      2 Template:KEY
+100.00%   30.486      1 -total
+ 37.50%   11.431      1 Template:Userdocnavi
+ 24.17%    7.369      1 Template:Caption
+ 10.72%    3.269      1 Template:TOCright
+  9.74%    2.969      2 Template:Docnav
+  7.65%    2.331      1 Template:Navigation_menu_2
+  6.06%    1.846      1 Template:Emphasis
+  4.67%    1.423      1 Template:Incode
+  4.58%    1.397      2 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071300 and revision id 1739826. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071355 and revision id 1739828. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
