Updated page Getting started/cs

--- a/wiki/cs/Getting_started.html
+++ b/wiki/cs/Getting_started.html
@@ -74,10 +74,8 @@
 </p><p><span id="Navigating_in_the_3D_space"></span>
 </p>
 <h2><span class="mw-headline" id="Navigace_ve_3D_prostoru">Navigace ve 3D prostoru</span></h2>
-<div class="mw-translate-fuzzy">
-<p>FreeCAD m&aacute; dostupn&eacute; &#269;ty&#345;i <a href="../cs/Mouse_Model.html" class="mw-redirect" title="Mouse Model/cs">naviga&#269;n&iacute; m&oacute;dy my&scaron;i</a> kter&eacute; m&#283;n&iacute; zp&#367;sob jak pou&#382;&iacute;v&aacute;te Va&scaron;i my&scaron; v interakci s objekty ve 3D pohledu a s pohledem samotn&yacute;m. Jeden z m&oacute;d&#367; je speci&aacute;ln&#283; vytvo&#345;en pro <a href="../cs/Mouse_Model.html#Touchpad_Navigation" class="mw-redirect" title="Mouse Model/cs">touchpady</a>, kde nen&iacute; pou&#382;ito prost&#345;edn&iacute; tla&#269;&iacute;tko. N&aacute;sleduj&iacute;c&iacute; tabulka popisuje defaultn&iacute; m&oacute;d, zvan&yacute; <b>CAD Navigation</b> (Rychle m&#367;&#382;ete zm&#283;nit aktu&aacute;ln&iacute; naviga&#269;n&iacute; m&oacute;d pomoc&iacute; prav&eacute;ho kliknut&iacute; my&scaron;i na pr&aacute;zdnou oblast e 3D pohledu):
+<p>FreeCAD m&aacute; k dispozici n&#283;kolik <a href="../Mouse_navigation.html" title="Mouse navigation">naviga&#269;n&iacute;ch re&#382;im&#367;</a>, kter&eacute; m&#283;n&iacute; zp&#367;sob, jak&yacute;m pou&#382;&iacute;v&aacute;te my&scaron; k interakci s objekty ve 3D pohledu a samotn&yacute;m pohledem. Jeden z nich je speci&aacute;ln&#283; vytvo&#345;en pro <a href="../Mouse_navigation.html#Touchpad_navigation" title="Mouse navigation">touchpady</a>, kde se nepou&#382;&iacute;v&aacute; prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i. V&yacute;choz&iacute;m re&#382;imem navigace je <a href="../Mouse_navigation.html#CAD_navigation" title="Mouse navigation">CAD navigace</a>. Aktu&aacute;ln&iacute; re&#382;im navigace m&#367;&#382;ete rychle zm&#283;nit pomoc&iacute; tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=NavigationCAD_dark.svg&amp;filetimestamp=20220305200617&amp;.html" class="mw-file-description"><img src="../File/NavigationCAD_dark.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span></span> ve <a href="../Status_bar.html" class="mw-redirect" title="Status bar">stavov&eacute; li&scaron;t&#283;</a> nebo kliknut&iacute;m prav&yacute;m tla&#269;&iacute;tkem my&scaron;i na pr&aacute;zdnou oblast <a href="../3D_view.html" class="mw-redirect" title="3D view">3D pohledu</a>.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>M&aacute;te tak&eacute; p&#345;ednastaveno n&#283;kolik pohled&#367; (pohled shora, pohled zep&#345;edu, atd.) dostupn&yacute;ch v menu Pohled, na pruhu n&aacute;stroj&#367; pohledu a numerick&yacute;mi kl&aacute;vesami (<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">1</span>, <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">2</span>, atd...), a tak&eacute; prav&yacute;m kliknut&iacute;m my&scaron;i na objekt nebo do pr&aacute;zdn&eacute; plochy 3D pohledu m&aacute;te rychl&yacute; p&#345;&iacute;stup k n&#283;kter&yacute;m b&#283;&#382;n&yacute;m operac&iacute;m jako je nastaven&iacute; jednotliv&yacute;ch pohled&#367; nebo um&iacute;st&#283;n&iacute; objektu v pohledu stromu.
 </p>
@@ -211,15 +209,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118071356
+Cached time: 20260118071552
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.102 seconds
-Real time usage: 0.235 seconds
-Preprocessor visited node count: 285/1000000
-Post&#8208;expand include size: 8490/2097152 bytes
-Template argument size: 2342/2097152 bytes
+CPU time usage: 0.106 seconds
+Real time usage: 0.225 seconds
+Preprocessor visited node count: 294/1000000
+Post&#8208;expand include size: 8855/2097152 bytes
+Template argument size: 2378/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -227,18 +225,19 @@ Unstrip post&#8208;expand size: 4565/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.486      1 -total
- 37.50%   11.431      1 Template:Userdocnavi
- 24.17%    7.369      1 Template:Caption
- 10.72%    3.269      1 Template:TOCright
-  9.74%    2.969      2 Template:Docnav
-  7.65%    2.331      1 Template:Navigation_menu_2
-  6.06%    1.846      1 Template:Emphasis
-  4.67%    1.423      1 Template:Incode
-  4.58%    1.397      2 Template:KEY
+100.00%   20.561      1 -total
+ 22.09%    4.543      1 Template:Userdocnavi
+ 15.60%    3.207      1 Template:Incode
+ 15.15%    3.114      2 Template:KEY
+ 12.51%    2.573      1 Template:Navigation_menu_2
+ 12.01%    2.470      2 Template:Docnav
+  9.60%    1.974      1 Template:Emphasis
+  9.27%    1.906      1 Template:Caption
+  6.27%    1.290      1 Template:Button
+  5.76%    1.184      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071355 and revision id 1739828. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21373-0!canonical and timestamp 20260118071552 and revision id 1739830. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
